// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Format with already formatted text 1`] = `
Object {
  "errorCount": 0,
  "filePath": "<text>",
  "messages": Array [],
  "warningCount": 0,
}
`;

exports[`Format with ignored file 1`] = `
Object {
  "errorCount": 0,
  "messages": Array [],
  "warningCount": 0,
}
`;

exports[`Format with text 1`] = `
Object {
  "errorCount": 0,
  "filePath": "<text>",
  "messages": Array [],
  "output": "var foo = 'bar';",
  "warningCount": 0,
}
`;

exports[`Lint with syntax error 1`] = `
Object {
  "errorCount": 1,
  "filePath": "<text>",
  "messages": Array [
    Object {
      "column": 9,
      "line": 1,
      "message": "Parsing error: Unexpected token ===",
      "ruleId": "parser",
      "severity": 2,
    },
  ],
  "warningCount": 0,
}
`;

exports[`Lint with text 1`] = `
Object {
  "errorCount": 1,
  "filePath": "<text>",
  "messages": Array [
    Object {
      "column": 11,
      "endColumn": 16,
      "endLine": 1,
      "line": 1,
      "message": "Strings must use singlequote.",
      "ruleId": "quotes",
      "severity": 2,
    },
    Object {
      "column": 16,
      "line": 1,
      "message": "Missing semicolon.",
      "ruleId": "semi",
      "severity": 1,
    },
  ],
  "warningCount": 1,
}
`;
